--- a/ClassSchedulingProject/wwwroot/css/calendarAppDefaults.css
+++ b/ClassSchedulingProject/wwwroot/css/calendarAppDefaults.css
@@ -117,14 +117,10 @@ input[type=range] {
    overflow-y: scroll;
 }
 .ActiveEventsListItem {
-   border-left: solid 3px;
+   border-left: solid 2px;
    padding-left: 9px;
    color: white;
    transition: all .2s;
-}
-.ActiveEventsListItem:hover {
-   padding-left: 11px;
-   border-left: solid 5px;
 }
  .fc-timegrid-col-events {
     position: relative;
@@ -134,26 +130,26 @@ input[type=range] {
  .fc ::-webkit-scrollbar {
     display: none;
  }
-#EventWarnings {
+.eventWarning {
    cursor: pointer;
    color: white;
    font-size: 12px;
    display: none;
    height: fit-content;
-   width: 200px;
-   position: fixed;
+   width: 400px;
+   position: absolute;
    top: 0;
    left: 0;
-   background: rgba(255, 255, 255, .2);
+   background: rgba(255, 255, 255, .4);
    border-radius: 5px;
    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.219);
    backdrop-filter: blur(20px);
    -webkit-backdrop-filter: blur(5px);
    border: 1px solid rgba(194, 194, 194, 0.151);
-   z-index: 100;
    padding: 10px;
+   user-select: none;
 }
-#EventWarnings > div {
+.eventWarning > div {
    margin-bottom: 5px;
 }
 .close {
@@ -298,3 +294,6 @@ input[type=range] {
       height : 800px;
    }
  }
+ p > div {
+   color: rgb(90, 90, 90);
+  }
