--- a/ClassSchedulingProject/wwwroot/css/calendarAppDefaults.css
+++ b/ClassSchedulingProject/wwwroot/css/calendarAppDefaults.css
@@ -120,8 +120,15 @@ input[type=range] {
    border-left: solid 2px;
    padding-left: 9px;
    color: white;
-   transition: all .2s;
    overflow: hidden;
+}
+.listItemComponent{
+   position: relative;
+   transition: all .2s;
+   left: 0px;
+}
+.listItemComponent:hover{
+   left: 5px;
 }
 .collaspe-custom{
    cursor: pointer;
@@ -147,16 +154,18 @@ input[type=range] {
    display: none;
    height: fit-content;
    max-width: 600px;
-   position: absolute;
-   top: 0;
-   left: 0;
+   position: fixed;
    border-radius: 5px;
-   box-shadow: 0 2px 5px rgba(0, 0, 0, 0.219);
+   box-shadow: 0 2px 5px rgba(197, 197, 197, 0.219);
    backdrop-filter: blur(20px);
-   -webkit-backdrop-filter: blur(5px);
-   border: 1px solid rgba(194, 194, 194, 0.151);
+   -webkit-backdrop-filter: blur(20px);
+   border: 1.5px solid rgba(107, 107, 107, 0.151);
    padding: 10px;
    user-select: none;
+   background-color: #ffffffc0;
+}
+.eventWarning_focus {
+   box-shadow: 0 2px 10px rgba(119, 119, 119, 0.3);
 }
 .eventWarning > div {
    margin-bottom: 5px;
@@ -245,7 +254,6 @@ input[type=range] {
       background-color: inherit;
       color: #000;
       padding: 10px;
-      z-index: 999;
       -webkit-box-shadow: 0px 2px 10px 5px rgba(0,0,0,0.27); 
       box-shadow: 0px 2px 10px 5px rgba(0,0,0,0.27);
       overflow-y: scroll;
