--- a/ClassSchedulingProject/wwwroot/css/darkTheme.css
+++ b/ClassSchedulingProject/wwwroot/css/darkTheme.css
@@ -80,7 +80,16 @@
     display: none;
  } */
  .eventWarning {
-   background: rgba(0, 0, 0, 0.3)!important;
+   background: rgba(39, 45, 52, 0.836)!important;
+   box-shadow: 0 2px 5px rgba(51, 51, 51, 0.219);
+   backdrop-filter: blur(40px);
+   -webkit-backdrop-filter: blur(40px);
+}
+.eventWarning_focus {
+      backdrop-filter: blur(40px);
+   -webkit-backdrop-filter: blur(40px);
+   background: rgba(56, 65, 75, 0.514)!important;
+   background: linear-gradient(180deg, rgba(56, 65, 75, 0.514) 0%, rgb(53, 58, 68) 48%, rgba(56, 65, 75, 0.514) 100%)!important;
 }
  .fc  {
     -ms-overflow-style: none;
