--- a/ClassSchedulingProject/wwwroot/css/calendarAppDefaults.css
+++ b/ClassSchedulingProject/wwwroot/css/calendarAppDefaults.css
@@ -1,6 +1,7 @@
 body {
     overflow-x: hidden;
 }
+
 input[type=range] {
    box-sizing: border-box;
    font-size: 16px;
@@ -99,6 +100,21 @@ input[type=range] {
    -webkit-box-shadow: 0px 2px 10px 5px rgba(0,0,0,0.27); 
    box-shadow: 0px 2px 10px 5px rgba(0,0,0,0.27);
    overflow-y: scroll;
+}
+#eventMigration {
+   padding-left: 40px;
+   color: black;
+   z-index: 9999;
+   width: 100%;
+   height: 100%;
+   background-image: url("/img/noise_med.png")!important;
+   background-repeat: repeat;
+   background-color: rgba(255, 255, 255, 0.589);
+   backdrop-filter: blur(30px);
+   -webkit-backdrop-filter: blur(30px);
+}
+#eventMigration::-webkit-scrollbar {
+   display: none;
 }
 #ptitle {
    font-size: 20px;
@@ -314,3 +330,13 @@ input[type=range] {
  p > div {
    color: rgb(90, 90, 90);
   }
+
+.c1 {
+   padding-top: 15px;
+   padding-right: 10px;
+   padding-left: 10px;
+   padding-bottom: 10px;
+   margin-right: 20px;
+   background-color: rgba(0, 0, 0, 0.288);
+   border-radius: 5px;
+}
