looking at this with fresh eyes resulted in a scheme that makes more sense

--- a/ClassSchedulingProject/wwwroot/css/darkTheme.css
+++ b/ClassSchedulingProject/wwwroot/css/darkTheme.css
@@ -27,6 +27,9 @@
     background: var(--dark-1);
     color: var(--textcolor-1)!important;
  }
+ .card > .collapse  {
+   background: var(--dark-1);
+}
  .underlineText:hover {
     color: var(--linkColor)!important;
  }
